# provenance-cli

./: Cargo.toml  README.md  config.json
scripts/actions/: balance.sh  keys.sh  send.sh
scripts/scenarios/: quick_vote.sh
src/: main.rs
src/app/: cli.rs  config.rs  mod.rs
src/cmd/: exit.rs  help.rs  invalid.rs  mod.rs  null.rs
src/cmd/config/: get_config.rs  mod.rs  set_config.rs
src/cmd/exit/: mod.rs
src/cmd/help/: mod.rs
