[package]
name = "provenance-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.91"
clap = { version = "4.1.4", features = ["derive", "cargo", "string"]}
glob = "0.3.1"